--- a/app/scss/_blog-article.scss
+++ b/app/scss/_blog-article.scss
@@ -45,12 +45,12 @@
             list-style: disc;
         }
     }
-    &-arows {
-        display: flex;
-        justify-content: space-between;
-        &-right {
-            margin-right: 0;
-            margin-left: 25px;
-        }
-    }
+    // &-arows {
+    //     display: flex;
+    //     justify-content: space-between;
+    //     &-right {
+    //         margin-right: 0;
+    //         margin-left: 25px;
+    //     }
+    // }
 }
