--- a/app/scss/_general.scss
+++ b/app/scss/_general.scss
@@ -207,7 +207,8 @@ button, .btn {
             margin-bottom: 100px;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            // flex-grow: 1;
+            // justify-content: space-between;
             // flex-flow: wrap;
             // height: 565px;
             // display: flex;
@@ -231,11 +232,12 @@ button, .btn {
             font-weight: 700;
             color: $accent;
             margin-bottom: 30px;
-            min-height: 75px;
+            // min-height: 75px;
         }
         &-text {
             margin-bottom: 30px;
-            min-height: 120px;
+            flex-grow: 1;
+            // min-height: 120px;
         }
         &-link {
             color: #af8f72;
@@ -250,41 +252,34 @@ button, .btn {
     }
 }
 
-// breadcrumbs / search-of-trial-missions
-.breadcrumbs {
-    &-container {
+// page description
+.page-description {
+    &-top {
         padding-top: 100px;
         padding-bottom: 100px;
-        // &:before {
-        //     content: '';
-        //     position: absolute;
-        //     top: 0;
-        //     left: 0;
-        //     border: 4px solid red;
-        // }
     }
-    &-way {
+    .breadcrumbs {
         display: flex;
         margin-bottom: 70px;
-    }
-    &-link {
-        font-size: 14px;
-        font-weight: 400;
-        color: #AF8F72;
-        &:hover {
+        &-link {
+            font-size: 14px;
+            font-weight: 400;
             color: #AF8F72;
-        }
-        img {
-            margin-left: 20px;
-            margin-right: 20px;
+            &:hover {
+                color: #af8f7296;
+            }
+            img {
+                margin-left: 20px;
+                margin-right: 20px;
+            }
         }
     }
-    &-item {
+    &-block {
         display: flex;
         align-items: center;
         margin-bottom: 20px;
     }
-    &-image {
+    &-img {
         width: 50px;
         height: 50px;
         border-radius: 50%;
@@ -295,7 +290,7 @@ button, .btn {
         margin-right: 15px;
     }
     &-article {
-        margin-bottom: 0 !important;
+        margin-bottom: 0 ;
     }
     h1 {
         font-size: 35px;
@@ -304,40 +299,137 @@ button, .btn {
         line-height: 50px;
         max-width: 700px;
     }
-    .search-text {
+    &-text {
         max-width: 760px;
         margin-bottom: 0;
     }
-    &-back {
+    .go-block {
         padding-top: 100px;
         padding-bottom: 100px;
-    }
-    &-img {
-        height: 42px;
-        width: 42px;
-        border-radius: 50%;
-        background: #AF8F72;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-right: 25px;
-        img {
-            height: 20px;
+        &-content {
+            display: flex;
+            align-items: center;
+        }
+        &-previous {
+            height: 42px;
+            width: 42px;
+            border-radius: 50%;
+            background: #AF8F72;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-right: 25px;
+            img {
+                height: 20px;
+            }
+        }
+        &-text {
+            font-size: 19px;
+            font-weight: 700;
+            color: #AF8F72;
+        }
+        &-premature {
+            display: flex;
+            justify-content: space-between;
+        }
+        &-next {
+            margin-right: 0;
+            margin-left: 25px;
         }
     }
-    &-content {
-        display: flex;
-        align-items: center;
-    }
-    &-text {
-        font-size: 19px;
-        font-weight: 700;
-        color: #AF8F72;
-    }
-    .container {
-        margin-bottom: 0;
-    }
+    // .container {
+    //     margin-bottom: 0;
+    // }
 }
+
+// breadcrumbs / search-of-trial-missions
+// .breadcrumbs {
+//     &-container {
+//         padding-top: 100px;
+//         padding-bottom: 100px;
+//         // &:before {
+//         //     content: '';
+//         //     position: absolute;
+//         //     top: 0;
+//         //     left: 0;
+//         //     border: 4px solid red;
+//         // }
+//     }
+    // &-way {
+    //     display: flex;
+    //     margin-bottom: 70px;
+    // }
+    // &-link {
+    //     font-size: 14px;
+    //     font-weight: 400;
+    //     color: #AF8F72;
+    //     &:hover {
+    //         color: #AF8F72;
+    //     }
+    //     img {
+    //         margin-left: 20px;
+    //         margin-right: 20px;
+    //     }
+    // }
+    // &-item {
+    //     display: flex;
+    //     align-items: center;
+    //     margin-bottom: 20px;
+    // }
+    // &-image {
+    //     width: 50px;
+    //     height: 50px;
+    //     border-radius: 50%;
+    //     background: #F0EDE9;
+    //     display: flex;
+    //     justify-content: center;
+    //     align-items: center;
+    //     margin-right: 15px;
+    // }
+    // &-article {
+    //     margin-bottom: 0 !important;
+    // }
+    // h1 {
+    //     font-size: 35px;
+    //     color: #141414;
+    //     font-weight: 700;
+    //     line-height: 50px;
+    //     max-width: 700px;
+    // }
+    // .search-text {
+    //     max-width: 760px;
+    //     margin-bottom: 0;
+    // }
+    // &-back {
+    //     padding-top: 100px;
+    //     padding-bottom: 100px;
+    // }
+    // &-img {
+    //     height: 42px;
+    //     width: 42px;
+    //     border-radius: 50%;
+    //     background: #AF8F72;
+    //     display: flex;
+    //     align-items: center;
+    //     justify-content: center;
+    //     margin-right: 25px;
+    //     img {
+    //         height: 20px;
+    //     }
+    // }
+    // &-content {
+    //     display: flex;
+    //     align-items: center;
+    // }
+    // &-text {
+    //     font-size: 19px;
+    //     font-weight: 700;
+    //     color: #AF8F72;
+    // }
+    // .container {
+    //     margin-bottom: 0;
+    // }
+// }
 // coaching-job
 .coaching-job {
     &-title {
