--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -4,9 +4,12 @@
 	height: 80px;
 	display: flex;
 	align-items: center;
-	// @include for-mobile {
-	// 	background: red;
-	// }
+	@include for-md {
+		background:#fff;
+        z-index: 3;
+        transition: all 0.3s ease;
+        box-shadow: inset 2px 2px 5px rgba(154, 147, 140, 0.5), 1px 1px 5px rgba(255, 255, 255, 1);
+	}
 	&-content {
 		display: flex;
 		justify-content: space-between;
@@ -26,17 +29,52 @@
 			color: $text_secondary;
 			font-size: 18px;
 			// font-weight: 600;
+			@include for-md {
+				color: #DCD2C5;
+				padding-top: 10px;
+				margin-bottom: 10px;
+				margin-left: 0;
+				margin-right: 0 !important;
+			}
 		}
 		a {
 			&:hover {
 				color: #AF8F72;
 			}
 		}
+		@include for-md {
+			position: absolute;
+			left: 0;
+			right: 0;
+			top: 80px;
+			background: $text_secondary;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			opacity: 0;
+			visibility: hidden;
+			transition: all 0.3 ease;
+			height: auto;
+			padding-top: 50px;
+			padding-bottom: 50px;
+			&.active {
+				opacity: 1;
+				visibility: visible;
+			}
+		}
+		@include for-sm {
+			height: 100%;
+		}
 	}
 	.container {
 		max-width: 100%;
 		padding-left: 40px;
 		padding-right: 40px;
+		@include for-sm {
+			padding-left: 15px;
+			padding-right: 15px;
+		}
 	}
 }
 .burger {
@@ -47,6 +85,9 @@
 	transition: .5s ease-in-out;
 	cursor: pointer;
     z-index: 1;
+	// @include for-md {
+	// 	display: block;
+	// }
 	span {
 		display: block;
 		position: absolute;
