--- a/app/scss/_jobs.scss
+++ b/app/scss/_jobs.scss
@@ -15,6 +15,11 @@
     &-page {
         padding-left: 40px;
         padding-right: 40px;
+        @include for-sm {
+            padding-bottom: 0;
+            padding-left: 15px;
+            padding-right: 15px;
+        }
     }
     &-content {
         background: #F0EDE9;
@@ -30,6 +35,9 @@
             left: 50%;
             top: 0%;
             transform: translate(-50%,-0%);
+        }
+        @include for-sm {
+            padding-bottom: 60px;
         }
     }
     &-block {
@@ -51,6 +59,9 @@
         a {
             font-weight: 600;
             font-size: 18px;
+        }
+        @include for-sm {
+            padding: 30px;
         }
     }
 }
