--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -530,6 +530,7 @@
 		flex-direction: column;
 		align-items: center;
 		justify-content: space-around;
+		width: 100%;
 		@include for-md {
 			padding: 20px;
 		}
